# FSCs-Empirical-Analysis

./: README.md
Artifacts/factice/: pyproject.toml
Artifacts/factice/contract_data/: EOA_DEPLOY vs FACTORY_DEPLOY_COUNT.txt  Factory Contract Quantity.txt  contract_num_created_by_factory.txt  create vs create2.xls  low-level vs high-level.xlsx
Artifacts/factice/factice_scripts/: Detect_Factory_Ground_Truth.py  FSC_Validation.py  api_config.py  deployed_metamorphic.py  fix_data.py  fix_date.py  fix_factory_created.py  fplot.py  metamorphic_factory.py  preprocess_contracts.py  save_network_contracts.py  save_raw_contracts.py  save_scf_related_contracts.py  security_checker.py  select_create_and_create2.py  test.py  utils.py  write_and_read_statistical_results.py
Artifacts/factice/metamorphic/: README.md  contract_node.py  detect.py  etherscan.py  opcodes.py
Artifacts/factice/mysql/: api.py  contract_file_node.py
Artifacts/factice/mysql/dao/: __init__.py  address_validation.py  contract_file.py  contract_relation.py  database_client.py  fsc_validation.py  implement_contract_validation.py  potential_metamorphic_contract.py  sender_in_constructor.py
Artifacts/factice/slither/: __main__.py
Artifacts/factice/statistics/: README.md  contract_percent_and_execute_time.json  create_date_total_contract_count_created.json  create_date_total_contract_count_factory.json  create_date_total_contract_count_normal.json  factory_num_percent_and_least_txcont.json  factory_num_percent_and_txcount.json  request_tx.py
Artifacts/factice/usage/: try.py  utils.py
(+110 files in other folders)
